# python-template

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: black.yml
git_hooks/: pre-commit
python_template/: __init__.py  __main__.py
